--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.loanapp">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.lendme">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,56 +12,34 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity
-            android:name=".MessageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ChatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ItemActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SignUpActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.LendMe"
+        tools:targetApi="31">
         <activity
             android:name=".LogoutActivity"
             android:exported="false" />
         <activity
-            android:name=".PaymentActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ConfirmationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PostItemActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ItemsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BorrowingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LendingActivity"
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
 
         <meta-data
             android:name="com.parse.SERVER_URL"
@@ -73,7 +52,7 @@
             android:value="@string/back4app_client_key" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="@string/map_key" />
     </application>
 
 </manifest>
