--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
 //    shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    // cardView
+    implementation 'com.google.android.material:material:1.2.1'
 
 }
